Refactor README: concise, table-based, GitHub-friendly